--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,19 @@
+//COLORS
 $color-primary:#55c57a;
 $color-primary-light:#7ed56f;
 $color-primary-dark:#28b485;
 
+$color-gray-light-1:#f7f7f7;
+
 $color-gray-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+
+//FONT
+$default-font-size: 1.6rem;
+
+//GRID
+$grid-width:114rem;
+$gutter-vertical:8rem;
+$gutter-horizontal:6rem;
+
