--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -9,7 +9,7 @@
         border-radius: 10rem;
         transition: all .2s;
         position: relative;
-        font-size: 1.6rem;
+        font-size: $default-font-size;
     }
 
     &:hover{
@@ -51,5 +51,30 @@
     &--animated{
         animation:moveInBottom .5s ease-out .6s;
         animation-fill-mode: backwards;
+    }
+}
+
+.btn-text{
+    &:link,
+    &:visited{
+        color:$color-primary;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid $color-primary;
+        padding:3px;
+        font-size: $default-font-size;
+        transition: all .2s;
+    }
+
+    &:hover{
+        background-color: $color-primary;
+        color:$color-white;
+        box-shadow: 0 .7rem 2rem rgba($color-black, .3);
+        transform: translateY(-2px);
+    }
+
+    &:active{
+        box-shadow: 0 .3rem 1rem rgba($color-black, .3);
+        transform: translateY(0);
     }
 }
