--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,14 +1,17 @@
+@import "base/base";
+
 @import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
 @import "base/animation";
-@import "base/base";
 @import "base/typography";
 @import "base/utilities";
 
 @import "components/button";
+@import "components/composition";
 
+@import "layout/grid";
 @import "layout/header";
 
 @import "pages/home";
