--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,7 +6,7 @@
 
 .section-features{
     padding:20rem 0;
-    margin-top: -10rem;
+    margin-top: -11.5rem;
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8),
@@ -18,4 +18,10 @@
     & > * {
         transform: skewY(7deg);
     }
+}
+
+.section-tours{
+    background-color: $color-gray-light-1;
+    padding: 25rem 0 50rem 0;
+    margin-top: -11.5rem;
 }
