--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -10,6 +10,7 @@ body{
     color: $color-white;
     text-transform: uppercase;
     margin-bottom: 6rem;
+    backface-visibility: hidden;
 
     &--main{
         display: block;
