--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,10 +1,130 @@
 .card{
-    background-color: orangered;
-    height:50rem;
-    transition: all .8s;
+    //FUNCTIONALITY
+    perspective: 150rem;
+    -moz-perspective: 150rem;
+    position: relative;
+    height:52rem;
 
-    &:hover{
-        transform: rotateY(180deg);
+    &__side {
+        font-size: 2rem;
+        height:52rem;
+        position: absolute;
+        top:0;
+        left: 0;
+        transition: all .8s ease;
+        width:100%; 
+        backface-visibility: hidden;
+        border-radius:3px;
+        overflow: hidden;
+        box-shadow:0 1.5rem 4rem rgba($color-black, .15);
+
+        &--front{
+            background-color: $color-white;
+        }
+
+        &--back{
+            transform: rotateY(180deg);
+            &-1{
+                background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
+            }
+        }
     }
 
+    &:hover &__side--front{
+        transform: rotateY(-180deg);
+    }
+
+    &:hover &__side--back{
+        transform: rotateY(0deg);
+    }
+
+    //FRONT SIDE STYLE
+    &__picture {
+        background-size: cover;
+        height:23rem;
+        background-blend-mode: screen;
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+        &--1 {
+            background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), 
+            url('../img/nat-5.jpg');
+        }
+
+        &--2 {
+            background-image: url('../img/nat-6.jpg');
+        }
+
+        &--3 {
+            background-image: url('../img/nat-7.jpg');
+        }
+    }
+
+    &__heading {
+        text-transform: uppercase;
+        font-size: 2.8rem;
+        font-weight: 300;
+        color:$color-white;
+        position: absolute;
+        top:12rem;
+        right:2rem;
+        text-align: right;
+        width:75%;
+    }
+
+    &__heading-span {
+        padding:1rem 1.5rem;
+        -webkit-box-decoration-break:clone;
+        box-decoration-break:clone;
+        &--1 {
+            background-image: linear-gradient(to right bottom, 
+            rgba($color-secondary-light, .85), 
+            rgba($color-secondary-dark, .85));  
+        }
+    }
+
+    &__details{
+        padding-top: 3rem;
+        ul {
+            list-style: none;
+            width:80%;
+            margin: 0 auto;
+
+            li {
+                text-align: center;
+                font-size: 1.5rem;
+                padding: 1rem;
+                &:not(:last-child){
+                    border-bottom: 1px solid $color-gray-light-2;
+                }
+
+            }
+        }
+    }
+
+    //BACK SIDE STYLE
+    &__cta{
+        position: absolute;
+        top:50%;
+        left:50%;
+        transform: translate(-50%, -50%);
+        width:90%;
+        text-align: center;
+    }
+
+    &__price-box{
+        margin-bottom: 8rem;
+        color:$color-white;
+    }
+
+    &__price-only {
+        font-size: 1.4rem;
+        text-transform: uppercase;
+    }
+    
+    &__price-value {
+        font-size: 6rem;
+        font-weight: 100;
+    }
+    
 }
