--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -25,3 +25,8 @@
     padding: 30rem 0 15rem 0;
     margin-top: -10rem;
 }
+
+.section-stories{
+    padding:15rem 0;
+    background-color: $color-gray-light-1;
+}
