--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,5 +1,5 @@
 .btn{
-
+    &,
     &:link,
     &:visited{
         text-decoration: none;
@@ -10,6 +10,9 @@
         transition: all .2s;
         position: relative;
         font-size: $default-font-size;
+
+        border:none;
+        cursor:pointer;
     }
 
     &:hover{
@@ -21,7 +24,9 @@
         }
     }
 
-    &:active{
+    &:active,
+    &:focus{
+        outline:none;
         transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba($color-black, .2);
     }
@@ -41,7 +46,7 @@
 
     &--white{
         background-color: $color-white;
-        color: $color-gray-dark;
+        color: $color-gray-dark-1;
 
         &::after{
             background-color: $color-white;
