--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,8 +14,10 @@
 @import "components/card";
 @import "components/story";
 @import "components/bg-video";
+@import "components/form";
 
 @import "layout/grid";
 @import "layout/header";
+@import "layout/footer";
 
 @import "pages/home";
