--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -8,16 +8,31 @@
     padding-left: 9rem;
     transform: skewX(-12deg);
 
+    @include respond(tab-port) {
+        width:100%;
+        padding:4rem;
+        padding-left: 7rem;
+    }
+
+    @include respond(phone) {
+        transform: skewX(0);
+    }
+
     &__shape {
         width:15rem;
         height:15rem;
         float:left;
         position: relative;
+        overflow: hidden;
         -webkit-shape-outside: circle(50% at 50% 50%);
         shape-outside: circle(50% at 50% 50%);
         -webkit-clip-path: circle(50% at 50% 50%);
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
+        
+        @include respond(phone) {
+            transform: translateX(-3rem) skewX(0);
+        }
     }
 
     &__image {
@@ -42,6 +57,10 @@
 
     &__text{
         transform: skewX(12deg);
+
+        @include respond(phone) {
+            transform: skewX(0);
+        }
     }
 
     &__caption {
