--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,9 +7,27 @@
 }
 
 html{
-    font-size: 62.5%; //10px
+    font-size: 62.5%;
+    @include respond(tab-land){ //1200px
+        font-size: 56.25%;//9px
+    }
+    @include respond(tab-port){ //900px
+        font-size: 50%;//8px
+    }
+    @include respond(big-desktop){
+        font-size: 75%; //12px
+    }
 }
 
 body{
     box-sizing:border-box;
+    padding:3rem;
+    @include respond(tab-port){ //900px
+        padding:0;
+    }
+}
+
+::selection {
+    background-color: $color-primary;
+    color:$color-white;
 }
