--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body{
     font-weight: 400;
     line-height: 1.7;
     color:$color-gray-dark-1;
-    padding:3rem;
 }
 
 .heading-primary{
@@ -18,6 +17,11 @@ body{
         font-weight: 400;
         letter-spacing: 3.5rem;
         animation:moveInLeft 1s ease-out;
+
+        @include respond(phone){ //900px
+           letter-spacing: 1rem;
+           font-size: 5rem;
+        }
     }
     
     &--sub{
@@ -26,6 +30,11 @@ body{
         font-weight: 700;
         letter-spacing: 1.75rem;
         animation:moveInRight 1s ease-out;
+
+        @include respond(phone){ 
+            letter-spacing: .5rem;
+            font-weight: 400;
+         }
     }  
 }
 
@@ -39,6 +48,15 @@ body{
     color:transparent;
     letter-spacing: 2px;
     transition: all .2s;
+
+    @include respond(tab-port){ 
+        font-size: 3rem;
+        padding:0 2rem;
+    }
+
+    @include respond(phone){
+        font-size: 2.5rem;
+    }
 
     &:hover{
         transform: skewY(2deg) skewX(15deg) scale(1.1);
