--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -9,6 +9,13 @@
     opacity: 0;
     visibility: hidden;
     transition: all .3s;
+    
+    @supports(-webkit-backdrop-filter:blur(10px)) or (backdrop-filter:blur(10px)) {
+        -webkit-backdrop-filter:blur(10px);
+        backdrop-filter:blur(10px);
+        background-color: rgba($color-black, .3);
+    }
+
 
     &__content {
         position: absolute;
@@ -28,6 +35,11 @@
     &__left {
         width:33.333333%;
         display: table-cell;
+        @include respond(tab-land) {
+            width:100%;
+            display: block;
+            text-align: center;
+        }
     }
 
     &__right {
@@ -35,11 +47,33 @@
         display: table-cell;
         vertical-align: middle;
         padding:3rem 5rem;
+        @include respond(tab-land) {
+            width:100%;
+            display: block;
+            padding-top:1.5rem;
+        }
+
+        .heading-secondary{
+            @include respond(tab-port) {
+               padding:0;
+            }
+        }
+
     }
 
     &__img {
-        display: block;
         width:100%;
+
+        @include respond(tab-land) {
+            width:40%;
+            display: inline-block;
+            padding: 2rem;
+            padding-bottom: 0;
+        }
+        @include respond(tab-port) {
+            display: none;
+        }
+
     }
 
     &__text {
@@ -50,6 +84,10 @@
         -webkit-hyphens: auto;
         -ms-hyphens: auto;
         hyphens: auto;
+
+        @include respond(tab-land) {
+            column-count: 1;
+        }
     }
 
     &:target {
