--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,9 +4,16 @@
     font-size: 1.4rem;
     color: $color-gray-light-1;
 
+    @include respond(tab-port) {
+        padding:8rem 0;
+    }
+
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
+        @include respond(tab-port) {
+            margin-bottom: 6rem;
+        }
     }
 
     &__logo {
@@ -18,6 +25,10 @@
          border-top:1px solid $color-gray-dark-1;
          padding-top:2rem;
          display: inline-block;
+         @include respond(tab-port) {
+            width:100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -56,6 +67,10 @@
         padding-top:2rem;
         width:90%;
         float: right;
+        @include respond(tab-port) {
+            width:100%;
+            float:none;
+        }
     }
 
 }
