--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,8 +1,17 @@
 .row{
     max-width:$grid-width;
     margin: 0 auto;
+
+    @include respond(tab-port){
+        max-width:50rem;
+        padding:0 3rem;
+    }
+
     &:not(:last-child){
         margin-bottom: $gutter-vertical;
+        @include respond(tab-port){
+            margin-bottom: $gutter-vertical-small;
+        }
     }
 
     @include clearfix;
@@ -11,6 +20,13 @@
         float:left;
         &:not(:last-child){
             margin-right: $gutter-horizontal;
+            @include respond(tab-port){ 
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
+        @include respond(tab-port){
+            width:100% !important;
         }
     }
 
